# xtarfile

./: .gitignore  .travis.yml  LICENSE.txt  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: cd.yml  ci.yml
tests/: test_xtarfile.py
xtarfile/: __init__.py  lz4.py  test.py  xtarfile.py  zstd.py
xtarfile/formats/: lz4.py  zst.py
