[metadata]
name = xtarfile
version = file: version.txt
url = https://github.com/ascoderu/xtarfile
#download_url = https://pypi.python.org/pypi/xtarfile
author = Clemens Wolff
author_email = clemens.wolff+pypi@gmail.com
description = Wrapper around tarfile with support for more compression formats.
long_description = file: README.rst
license = Apache Software License
classifiers = License :: OSI Approved :: Apache Software License, Programming Language :: Python :: 3.4, Programming Language :: Python :: 3.5, Programming Language :: Python :: 3.6, Topic :: Utilities

[options]
packages = xtarfile
python_requires = >=3.4

[options.extras_require]
zst = zstandard>=0.10.2
lz4 = lz4>=2.2.1
